# silly-tips-api

./: .gitignore  Cargo.toml  Config.example.toml
src/: main.rs  responses.txt
src/guards/: auth.rs
src/tip_module/: mod.rs  tip_model.rs
src/tip_module/controllers/: folder_controller.rs  mod.rs  tip_controller.rs
src/tip_module/services/: folder_service.rs  mod.rs  tip_service.rs
src/user_module/: mod.rs  user_controller.rs  user_model.rs  user_service.rs
src/utils/: hash_password.rs  mod.rs  simple_hashers.rs
