[package]
name = "silly-tips-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
futures = "0.3.28"
time = "0.3.36"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
argon2 = "0.5.3"


[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
